@@ -1,3 +1,8 @@
+2003-06-04  Thorsten Kukuk  <kukuk@suse.de>
+
+	* sysdeps/unix/sysv/linux/net/if_arp.h: Sync with kernel header,
+	fix typo.
+
 2003-06-26  Steven Munroe  <sjmunroe@us.ibm.com>
 
 	* sysdeps/unix/sysv/linux/xstatconv.h [!STAT_IS_KERNEL_STAT]:
